@@ -26,8 +26,6 @@ TODO:
     * Finalize the class structure and public plugin interface as it will be
       harder to remove/deprecate methods after the introduction of plugins.
     
-    * jsXe needs to support ActionPlugins
-    
     * Update the options dialog to show options from all installed views
     
     * jsXe should have a plugin manager window to display plugin information.
